# pcl_filter_components

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
filter_component_base/: CMakeLists.txt  README.md  package.xml
filter_component_base/test/: test_filter_component_shm.cpp
filter_component_editor/: CMakeLists.txt  README.md  package.xml  plugin.xml
filter_component_editor/filter_component_editor/: filter_discovery.py  parameter_discovery.py  pipeline_editor.py  pipeline_graph.py
filter_component_editor/filter_component_editor/items/: __init__.py  edge_handle_item.py  edge_item.py  node_item.py  port_item.py
filter_component_editor/filter_component_editor/views/: __init__.py  pipeline_view.py
filter_component_editor/test/: test_filter_discovery.py  test_parameter_discovery.py  test_pipeline_editor_connections.py  test_pipeline_graph.py
filter_component_factory/: CMakeLists.txt  README.md  package.xml
filter_component_factory/config/: example_pipeline.yaml
filter_component_factory/launch/: pipeline_factory.launch.py
filter_component_factory/src/: pipeline_factory_node.cpp  pipeline_graph.cpp
filter_component_factory/test/: test_filter_components.cpp  test_pipeline_factory.cpp  test_pipeline_graph.cpp
grid_map/grid_map_components_filter_chain/: CMakeLists.txt  README.md  package.xml
grid_map/grid_map_components_filter_chain/config/: filter_plugin_defaults.yaml
grid_map/grid_map_components_filter_chain/test/: test_discovery.py
pcl/pcl_filter_components/: CMakeLists.txt
pcl_filter_base/: CMakeLists.txt  README.md  package.xml
pcl_filter_components/: CMakeLists.txt  README.md  package.xml
pcl_filter_components/test/: test_filters.cpp  test_parameter_descriptors.cpp
pcl_filter_editor/: CMakeLists.txt  README.md  package.xml  plugin.xml
pcl_filter_editor/pcl_filter_editor/: __init__.py  filter_discovery.py  parameter_discovery.py  pipeline_editor.py  pipeline_graph.py
pcl_filter_editor/test/: test_pipeline_graph.py
pcl_filter_factory/: CMakeLists.txt  README.md  package.xml
pcl_filter_factory/config/: example_pipeline.yaml  filters.yaml
pcl_filter_factory/launch/: filter_pipeline.launch.py
pcl_filter_factory/src/: pipeline_factory_main.cpp  pipeline_factory_node.cpp  pipeline_graph.cpp
pcl_filter_factory/test/: test_pipeline_factory.cpp  test_pipeline_graph.cpp
pcl_filter_tests/: CMakeLists.txt  README.md  package.xml
pcl_filter_tests/test/: test_discovery.py
pcl_filter_type_adapters/: CMakeLists.txt  README.md  package.xml
pcl_filter_type_adapters/test/: test_type_adapter.cpp
pcl_filter_xyz/: CMakeLists.txt  README.md  package.xml
pcl_filter_xyz/src/downsampling/: approximate_voxel_grid_xyz_component.cpp  grid_minimum_xyz_component.cpp  random_sample_xyz_component.cpp  uniform_sampling_xyz_component.cpp  voxel_grid_xyz_component.cpp
pcl_filter_xyz/src/multi_input/: point_cloud_concatenate_xyz_component.cpp  point_cloud_difference_xyz_component.cpp  point_cloud_merger_xyz_component.cpp  point_cloud_subtract_xyz_component.cpp
pcl_filter_xyz/src/outlier_removal/: conditional_removal_xyz_component.cpp  radius_outlier_removal_xyz_component.cpp  statistical_outlier_removal_xyz_component.cpp
pcl_filter_xyz/src/segmentation/: euclidean_cluster_extract_xyz_component.cpp  plane_model_filter_xyz_component.cpp  sac_segmentation_extract_xyz_component.cpp
pcl_filter_xyz/src/selection/: extract_indices_xyz_component.cpp  keep_organized_xyz_component.cpp  passthrough_xyz_component.cpp  remove_infinite_xyz_component.cpp  remove_nan_xyz_component.cpp
pcl_filter_xyz/src/spatial/: crop_box_xyz_component.cpp  crop_sphere_xyz_component.cpp  frustum_culling_xyz_component.cpp  plane_clipper_xyz_component.cpp  project_inliers_xyz_component.cpp
pcl_filter_xyz/src/surface/: bilateral_filter_xyz_component.cpp  local_maximum_xyz_component.cpp  median_filter_xyz_component.cpp  morphological_filter_xyz_component.cpp  moving_least_squares_xyz_component.cpp  voxel_grid_covariance_xyz_component.cpp
pcl_filter_xyzi/: CMakeLists.txt  README.md  package.xml
pcl_filter_xyzi/src/: crop_box_xyzi_component.cpp  point_cloud_merger_xyzi_component.cpp
pcl_filter_xyzi/src/downsampling/: approximate_voxel_grid_xyzi_component.cpp  grid_minimum_xyzi_component.cpp  random_sample_xyzi_component.cpp  uniform_sampling_xyzi_component.cpp  voxel_grid_xyzi_component.cpp
pcl_filter_xyzi/src/intensity/: intensity_range_xyzi_component.cpp  intensity_threshold_xyzi_component.cpp
pcl_filter_xyzi/src/multi_input/: point_cloud_concatenate_xyzi_component.cpp  point_cloud_difference_xyzi_component.cpp  point_cloud_subtract_xyzi_component.cpp
pcl_filter_xyzi/src/outlier_removal/: conditional_removal_xyzi_component.cpp  radius_outlier_removal_xyzi_component.cpp  statistical_outlier_removal_xyzi_component.cpp
pcl_filter_xyzi/src/segmentation/: euclidean_cluster_extract_xyzi_component.cpp  plane_model_filter_xyzi_component.cpp  sac_segmentation_extract_xyzi_component.cpp
pcl_filter_xyzi/src/selection/: extract_indices_xyzi_component.cpp  keep_organized_xyzi_component.cpp  passthrough_xyzi_component.cpp  remove_infinite_xyzi_component.cpp  remove_nan_xyzi_component.cpp
pcl_filter_xyzi/src/spatial/: crop_sphere_xyzi_component.cpp  frustum_culling_xyzi_component.cpp  plane_clipper_xyzi_component.cpp  project_inliers_xyzi_component.cpp
pcl_filter_xyzi/src/surface/: bilateral_filter_xyzi_component.cpp  local_maximum_xyzi_component.cpp  median_filter_xyzi_component.cpp  morphological_filter_xyzi_component.cpp  moving_least_squares_xyzi_component.cpp  voxel_grid_covariance_xyzi_component.cpp
pcl_filter_xyzrgb/: CMakeLists.txt  README.md  package.xml
pcl_filter_xyzrgb/src/: point_cloud_merger_xyzrgb_component.cpp
pcl_filter_xyzrgb/src/color/: color_threshold_xyzrgb_component.cpp  rgb_range_xyzrgb_component.cpp
pcl_filter_xyzrgb/src/downsampling/: approximate_voxel_grid_xyzrgb_component.cpp  grid_minimum_xyzrgb_component.cpp  (+3 more)
pcl_filter_xyzrgba/: CMakeLists.txt  README.md  package.xml
pcl_filter_xyzrgba/src/: crop_box_xyzrgba_component.cpp
(+144 files in other folders)
