<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_tests</name>
  <version>0.1.0</version>
  <description>Installed-system integration tests for the PCL filter packages.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pcl_filter_base</exec_depend>
  <exec_depend>pcl_filter_type_adapters</exec_depend>
  <exec_depend>pcl_filter_components</exec_depend>
  <exec_depend>pcl_filter_xyzi</exec_depend>
  <exec_depend>pcl_filter_xyz</exec_depend>
  <exec_depend>pcl_filter_xyzrgb</exec_depend>
  <exec_depend>pcl_filter_xyzrgba</exec_depend>
  <exec_depend>pcl_filter_factory</exec_depend>
  <exec_depend>pcl_filter_editor</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
