<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_type_adapters</name>
  <version>0.1.0</version>
  <description>rclcpp type adapters for stamped PCL clouds and point indices.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointNormal"
      type_adapter="pcl_filter_type_adapters::ros::PclNormalCloudAdapter"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      type="PointIndices"
      type_adapter="pcl_filter_type_adapters::ros::PclIndicesAdapter"
      message_type="pcl_msgs/msg/PointIndices"/>
  </export>
</package>
