<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyz</name>
  <version>0.1.0</version>
  <description>PointXYZ instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZ"
      type_adapter="pcl_filter_xyz::ros::PclCloudAdapterPointXYZ"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZ"
      input="PointXYZ"
      output="PointXYZ,PointIndices"/>
    <pcl_filter_component
      filter="PassThroughXYZ"
      input="PointXYZ"
      output="PointXYZ,PointIndices"/>
    <pcl_filter_component
      filter="CropBoxXYZ"
      input="PointXYZ"
      output="PointXYZ,PointIndices"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZ"
      input="PointXYZ,PointXYZ"
      output="PointXYZ"/>
  </export>
</package>
